@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.5.6"
+       version="2.5.7"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
@@ -20,6 +20,7 @@
     <supportedcontent>
       <content>movies</content>
       <content>tvshows</content>
+      <content>episodes</content>
     </supportedcontent>
   </extension>
 </addon>
